[gd_scene load_steps=11 format=3 uid="uid://cdak4o3njegvw"]

[ext_resource type="Texture2D" uid="uid://1ujc8g15k8a5" path="res://sprites/board/boardtarget.png" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://brq28asvb3ok3" path="res://sprites/board/boardtop.png" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://br2xcf8kanvej" path="res://scripts/targetrandomizer.gd" id="2_h2yge"]
[ext_resource type="Script" uid="uid://bfg0fhne22jb3" path="res://scripts/coveranimation.gd" id="3_7mycd"]
[ext_resource type="Texture2D" uid="uid://x3mcta2tdgs4" path="res://sprites/board/boardselector.png" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://ewqnov2ow463" path="res://sounds/sliding.ogg" id="4_272bh"]
[ext_resource type="Script" uid="uid://dt7l7gb4psnty" path="res://scripts/selector.gd" id="4_lquwl"]
[ext_resource type="Script" uid="uid://cliy8teaersbg" path="res://scripts/camerazoom.gd" id="8_5vw27"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(0.5, 13)

[sub_resource type="LabelSettings" id="LabelSettings_7mycd"]
font_size = 44

[node name="Main" type="Node2D"]

[node name="Board Background" type="Polygon2D" parent="."]
position = Vector2(-7, -3.5)
color = Color(0.886275, 0.894118, 0.866667, 1)
polygon = PackedVector2Array(578, 54, 524, 63, 524, 63, 482, 84, 438, 119, 415, 144, 397, 179, 382, 217, 378, 273, 791, 274, 792, 248, 781, 202, 760, 166, 742, 137, 703, 97, 647, 62.5)

[node name="Target" type="StaticBody2D" parent="."]
position = Vector2(577, 258.5)
rotation = 1.22173
script = ExtResource("2_h2yge")

[node name="Target Sprite" type="Sprite2D" parent="Target"]
texture = ExtResource("1_0xm2m")
offset = Vector2(0, -100)

[node name="4point" type="Area2D" parent="Target"]
monitorable = false

[node name="4 Point Collision" type="CollisionPolygon2D" parent="Target/4point"]
polygon = PackedVector2Array(-14, -201, 14, -201, 1, 1)

[node name="3point" type="Area2D" parent="Target"]
monitorable = false

[node name="3 Point Collision" type="CollisionPolygon2D" parent="Target/3point"]
polygon = PackedVector2Array(-42, -197, -14, -200, 14, -201, 43, -196, 1, 1)

[node name="2point" type="Area2D" parent="Target"]
monitorable = false

[node name="2 Point Collision" type="CollisionPolygon2D" parent="Target/2point"]
polygon = PackedVector2Array(-42, -197, -14, -200, 14, -201, 43, -196, 71, -188, 1, 1, -71, -188)

[node name="Board Cover" type="StaticBody2D" parent="."]
position = Vector2(577, 262.5)
script = ExtResource("3_7mycd")

[node name="Polygon2D2" type="Polygon2D" parent="Board Cover"]
position = Vector2(-584, -262)
color = Color(0.690196, 0.823529, 0.756863, 1)
polygon = PackedVector2Array(591.823, 53.6762, 548.813, 53.9523, 518.123, 64.8675, 493.49, 77.6039, 471.885, 91.2509, 457.09, 100.031, 441.877, 112.544, 428.006, 124.61, 411, 145.172, 401.599, 159.477, 392.643, 179.596, 383.234, 207.317, 378.295, 239.514, 380, 265, 793.048, 264.785, 789.904, 239.297, 786.048, 215.42, 777.791, 190.745, 763.73, 160.475, 745.992, 135.447, 724.696, 112.502, 701.051, 93.4533, 678.557, 77.1135, 656.24, 66.771, 627.956, 57.606)

[node name="slidingsfx" type="AudioStreamPlayer2D" parent="Board Cover"]
stream = ExtResource("4_272bh")
volume_db = 3.0

[node name="Board" type="Sprite2D" parent="."]
position = Vector2(578, 322)
texture = ExtResource("1_ig7tw")

[node name="Selector" type="CharacterBody2D" parent="."]
position = Vector2(578, 260.5)
script = ExtResource("4_lquwl")

[node name="Board Selector" type="Sprite2D" parent="Selector"]
position = Vector2(-1, 0)
texture = ExtResource("4_1bvp3")
offset = Vector2(0, -75)

[node name="collision" type="Area2D" parent="Selector"]
position = Vector2(-1, -2)
monitoring = false

[node name="Hitbox" type="CollisionShape2D" parent="Selector/collision"]
position = Vector2(0, -188)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="Points Counter" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 932.0
offset_right = 1137.0
offset_bottom = 61.0
grow_horizontal = 0
text = "0"
label_settings = SubResource("LabelSettings_7mycd")
horizontal_alignment = 2
justification_flags = 162

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(578, 322)
script = ExtResource("8_5vw27")

[connection signal="area_entered" from="Target/4point" to="Selector" method="four_entered"]
[connection signal="area_exited" from="Target/4point" to="Selector" method="four_exited"]
[connection signal="area_entered" from="Target/3point" to="Selector" method="three_entered"]
[connection signal="area_exited" from="Target/3point" to="Selector" method="three_exited"]
[connection signal="area_entered" from="Target/2point" to="Selector" method="two_entered"]
[connection signal="area_exited" from="Target/2point" to="Selector" method="two_exited"]
